# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import openaiRouter from "./openai";
+import bibleRouter from "./bible";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(openaiRouter);
+router.use(bibleRouter);
 
 export default router;
